3-Rust-Clippy-Analysis/qsort_clippy/qsort_clippy_output.txt
    Checking qsort_clippy v0.1.0 (/mnt/c/Users/mazin/Downloads/School/Research/datasets/3-Rust-Clippy-Analysis/qsort_clippy)
error: unsafe attribute used without unsafe
  --> src/qsort.rs:10:3
   |
10 | #[no_mangle]
   |   ^^^^^^^^^ usage of unsafe attribute
   |
help: wrap the attribute in `unsafe(...)`
   |
10 | #[unsafe(no_mangle)]
   |   +++++++         +

error: unsafe attribute used without unsafe
  --> src/qsort.rs:16:3
   |
16 | #[no_mangle]
   |   ^^^^^^^^^ usage of unsafe attribute
   |
help: wrap the attribute in `unsafe(...)`
   |
16 | #[unsafe(no_mangle)]
   |   +++++++         +

error: unsafe attribute used without unsafe
  --> src/qsort.rs:40:3
   |
40 | #[no_mangle]
   |   ^^^^^^^^^ usage of unsafe attribute
   |
help: wrap the attribute in `unsafe(...)`
   |
40 | #[unsafe(no_mangle)]
   |   +++++++         +

error[E0433]: failed to resolve: use of undeclared crate or module `libc`
  --> src/qsort.rs:11:43
   |
11 | pub unsafe extern "C" fn swap(mut a: *mut libc::c_int, mut b: *mut libc::c_int) {
   |                                           ^^^^ use of undeclared crate or module `libc`

error[E0433]: failed to resolve: use of undeclared crate or module `libc`
  --> src/qsort.rs:11:68
   |
11 | pub unsafe extern "C" fn swap(mut a: *mut libc::c_int, mut b: *mut libc::c_int) {
   |                                                                    ^^^^ use of undeclared crate or module `libc`

error[E0433]: failed to resolve: use of undeclared crate or module `libc`
  --> src/qsort.rs:12:16
   |
12 |     let mut t: libc::c_int = *a;
   |                ^^^^ use of undeclared crate or module `libc`

error[E0433]: failed to resolve: use of undeclared crate or module `libc`
  --> src/qsort.rs:18:19
   |
18 |     mut arr: *mut libc::c_int,
   |                   ^^^^ use of undeclared crate or module `libc`

error[E0433]: failed to resolve: use of undeclared crate or module `libc`
  --> src/qsort.rs:19:14
   |
19 |     mut low: libc::c_int,
   |              ^^^^ use of undeclared crate or module `libc`

error[E0433]: failed to resolve: use of undeclared crate or module `libc`
  --> src/qsort.rs:20:15
   |
20 |     mut high: libc::c_int,
   |               ^^^^ use of undeclared crate or module `libc`

error[E0433]: failed to resolve: use of undeclared crate or module `libc`
  --> src/qsort.rs:21:6
   |
21 | ) -> libc::c_int {
   |      ^^^^ use of undeclared crate or module `libc`

error[E0433]: failed to resolve: use of undeclared crate or module `libc`
  --> src/qsort.rs:22:20
   |
22 |     let mut pivot: libc::c_int = *arr.offset(high as isize);
   |                    ^^^^ use of undeclared crate or module `libc`

error[E0433]: failed to resolve: use of undeclared crate or module `libc`
  --> src/qsort.rs:23:16
   |
23 |     let mut i: libc::c_int = low - 1 as libc::c_int;
   |                ^^^^ use of undeclared crate or module `libc`

error[E0433]: failed to resolve: use of undeclared crate or module `libc`
  --> src/qsort.rs:23:41
   |
23 |     let mut i: libc::c_int = low - 1 as libc::c_int;
   |                                         ^^^^ use of undeclared crate or module `libc`

error[E0433]: failed to resolve: use of undeclared crate or module `libc`
  --> src/qsort.rs:24:16
   |
24 |     let mut j: libc::c_int = low;
   |                ^^^^ use of undeclared crate or module `libc`

error[E0433]: failed to resolve: use of undeclared crate or module `libc`
  --> src/qsort.rs:25:28
   |
25 |     while j <= high - 1 as libc::c_int {
   |                            ^^^^ use of undeclared crate or module `libc`

error[E0433]: failed to resolve: use of undeclared crate or module `libc`
  --> src/qsort.rs:35:36
   |
35 |         &mut *arr.offset((i + 1 as libc::c_int) as isize),
   |                                    ^^^^ use of undeclared crate or module `libc`

error[E0433]: failed to resolve: use of undeclared crate or module `libc`
  --> src/qsort.rs:38:21
   |
38 |     return i + 1 as libc::c_int;
   |                     ^^^^ use of undeclared crate or module `libc`

error[E0433]: failed to resolve: use of undeclared crate or module `libc`
  --> src/qsort.rs:42:19
   |
42 |     mut arr: *mut libc::c_int,
   |                   ^^^^ use of undeclared crate or module `libc`

error[E0433]: failed to resolve: use of undeclared crate or module `libc`
  --> src/qsort.rs:43:14
   |
43 |     mut low: libc::c_int,
   |              ^^^^ use of undeclared crate or module `libc`

error[E0433]: failed to resolve: use of undeclared crate or module `libc`
  --> src/qsort.rs:44:15
   |
44 |     mut high: libc::c_int,
   |               ^^^^ use of undeclared crate or module `libc`

error[E0433]: failed to resolve: use of undeclared crate or module `libc`
  --> src/qsort.rs:47:20
   |
47 |         let mut i: libc::c_int = partition(arr, low, high);
   |                    ^^^^ use of undeclared crate or module `libc`

error[E0433]: failed to resolve: use of undeclared crate or module `libc`
  --> src/qsort.rs:48:38
   |
48 |         quickSort(arr, low, i - 1 as libc::c_int);
   |                                      ^^^^ use of undeclared crate or module `libc`

error[E0433]: failed to resolve: use of undeclared crate or module `libc`
  --> src/qsort.rs:49:33
   |
49 |         quickSort(arr, i + 1 as libc::c_int, high);
   |                                 ^^^^ use of undeclared crate or module `libc`

For more information about this error, try `rustc --explain E0433`.
error: could not compile `qsort_clippy` (bin "qsort_clippy") due to 23 previous errors
